@@ -1,3 +1,4 @@
+* Load plugins from local user directory
 * Manage tree_state attribute
 * Add simple tree_state support on form view
 * Change range operator of search widget to be included
